--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>welcome to my js notes</h1>
-    <h2>My name is Shikha</h2>
+    <h2>My name is Shikha -I study in CS third year</h2>
    <script src="index.js"></script> 
 </body>
 </html>
