--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>welcome to my js notes</h1>
     <h2>My name is Shikha -I study in CS third year</h2>
+    <h2>static typed means that launguage which define data types</h2>
+    <h2>dynamcityped in which no need of defining data type</h2>
    <script src="index.js"></script> 
 </body>
 </html>
